<resources>
    <string name="app_name">HabitChallenge</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="enter_email">введите почту...</string>
    <string name="enter_password">введите пароль...</string>
    <string name="repeat_password">повторите пароль...</string>
    <string name="already_registered">Уже зарегистрированы?</string>
    <string name="go_to_sign_up">Зарегистрироваться</string>
    <string name="sign_up">Sign Up</string>
    <string name="sign_in">Войти</string>
</resources>