<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.SignIn.SignInFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="240dp">

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginHorizontal="20dp"
            android:background="@color/white"
            >


            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/white"
                android:hint="@string/enter_email"
                android:inputType="textEmailAddress"
                android:paddingStart="12dp"
                android:paddingTop="15dp">

            </com.google.android.material.textfield.TextInputEditText>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginHorizontal="20dp"
            android:background="@color/white"
            android:layout_marginTop="30dp"
            >


            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/white"
                android:hint="@string/enter_password"
                android:inputType="textEmailAddress"
                android:paddingStart="12dp"
                android:paddingTop="15dp">

            </com.google.android.material.textfield.TextInputEditText>
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/go_to_sign_up"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            />
        <Button
            android:layout_width="match_parent"
            android:layout_marginHorizontal="120dp"
            android:layout_marginTop="50dp"
            android:text="@string/sign_in"
            android:layout_height="match_parent"/>
    </LinearLayout>

</FrameLayout>